- [Bugfix] Files in vault not decrypted (Cryptomator, Google Storage) (#13949)

8.5.1
- [Feature] Skip button to allow creating share with no passphrase (Dropbox, Box, ownCloud, Nextcloud) (#13846)
- [Feature] Redirect to application without requiring to copy authentication code when opening new connection (Dropbox)
- [Feature] Allow configuration of client certificate (ownCloud, Nextcloud)

8.5.0
- [Feature] Allow to view and revert previous versions of files (ownCloud, Nextcloud) (#10560)
- [Feature] Allow to request files with upload share link (Dropbox) (#13832)
- [Bugfix] Try keyboard-interactive authentication always before password for interoperability with 2FA configurations (SFTP)
- [Bugfix] Connect to custom hostname from pairing response (Files.com)
- [Bugfix] Failure creating upload link to request files (Nextcloud) (#13791)

8.4.5
- [Bugfix] Failure enabling connection profile from Preferences (#13739)
- [Bugfix] Only set userProject parameter in requests for buckets with requester pays option enabled (Google Storage) (#13745)
- [Bugfix] Allow glob pattern when searching for files in browser (#13781)

8.4.4
- [Bugfix] Prioritise password authentication if password is available (SFTP) (#13442)
- [Bugfix] Filter identities in SSH agent based on private key selection in bookmark (SFTP) (#13680)
- [Bugfix] Switch OAuth registration with redirect URIs shorter than the allowed maximum of 32 characters in Windows Store (Google Storage, Google Drive) (#13695)
- [Bugfix] Save OAuth expiry in keychain instead of preferences (#13710)

8.4.3
- [Bugfix] Repeated prompt to verify server fingerprint (SFTP, Windows) (#13638)
- [Bugfix] OAuth token not saved in credentials manager (Dropbox, Windows) (#13613)
- [Bugfix] Malformed authorization header with wrong region when browsing buckets in multiple regions (S3)
- [Bugfix] Lower memory footprint regardless of available memory on system (macOS)

8.4.2