@@ -83,6 +83,12 @@
     </li>
     <li><span class="label label-success">Feature</span> Allow configuration of client certificate (ownCloud, Nextcloud)
     </li>
+    <li><span class="label label-success">Feature</span> Use Authorization Code Flow with Proof Key for Code Exchange
+        (PKCE) (Google Storage, Google Drive, Dropbox)
+    </li>
+    <li><span class="label label-warning">Bugfix</span> Mutual authentication does not work with client certificates
+        with a friendly name set (Windows)
+    </li>
 </ul>
 
 <p>
